--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <style>
-        body {
-            background-color: #d8d8d8;
+        html, body {
+            background-color: #8fbcff;
             margin: 0;
             padding: 0;
+            width: 100%;
+            height: 100%;
         }
 
         .window {
@@ -18,16 +20,14 @@
         }
 
         .kubiks {
-            margin-top: 15%;
-            width: 292px;
             user-select: none;
         }
 
         .kubik {
-            width: 120px;
-            height: 96px;
+            width: 100px;
+            height: 100px;
             background-color: black;
-            margin: 12px;
+            margin: 10px;
             display: inline-block;
             cursor: pointer;
         }
@@ -35,7 +35,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CubicGame</title>
+    <title>KubikGame</title>
 </head>
 <body>
     <div class="window">
